# business-planner-full

./: .env.example  .gitignore  PROJECT_IMPROVEMENTS.md  README.md  docker-compose.local.yml  docker-compose.yml  test_improvements.py
backend/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  entrypoint.sh  migrate_attachments.py  migrate_rich_content_urls.py  pyproject.toml
backend/fastapi_application/: alembic.ini  main.py  test_s3.py
backend/fastapi_application/actions/: create_superuser.py
backend/fastapi_application/alembic/versions/: 2026_03_15_2148-dd1c875d1eaa_add_username_field_to_users_make_not_.py  2026_04_13_1210_4b7f6c2a9f1d_plan_block_drafts_and_currency_rates.py  2026_04_20_0109-148c246fb1c4_добавление_логирования_для_сервиса_почты.py  2026_05_18_2318-f12ff860a986_add_template_model.py  2026_05_18_2321-cedb05384afc_seed_default_templates.py  2026_05_18_2331-2f8703357c5a_add_snapshots_comments_and_public_.py  (+19 more)
backend/fastapi_application/api/: __init__.py
backend/fastapi_application/core/: block_types.py  cache.py  config.py  csrf.py  exceptions.py  html_utils.py  logging.py  search_service.py  validation_translator.py
backend/fastapi_application/services/: analytics.py  currency_sync.py  import_parsers.py  notification_broadcaster.py  s3.py
backend/fastapi_application/utils/: __init__.py  case_converter.py  network.py
backend/tests/: conftest.py  test_async_io.py  test_auth_datetime.py  test_crm_pipeline.py  test_dashboard.py  test_kanban_dependencies.py  test_local_storage.py  test_notifications.py
(+221 files in other folders)
